transitions / interactions, intro example, contact page images

--- a/src/_includes/testimonials.html
+++ b/src/_includes/testimonials.html
@@ -10,7 +10,7 @@
       <div class="col-lg-6">
         {% if page.testimonial.quote %}
         <div class="content ">
-          <p class="quote">&quot;{{ page.testimonial.quote }}&quot;</p>
+          <p class="quote">{{ page.testimonial.quote }}</p>
           <p>
             <span class="author">{{ page.testimonial.author }}</small><br>
               <span class="title">{{ page.testimonial.title }}</small>
@@ -18,7 +18,7 @@
         </div>
         {% else %}
         <div class="content">
-          <p class="quote">&quot;I get complimented on our website and materials constantly. In fact, I always joke that if Ocupop hadn’t done such a great job with our design I wouldn’t be so busy all the time!&quot;</p>
+          <p class="quote">I get complimented on our website and materials constantly. In fact, I always joke that if Ocupop hadn’t done such a great job with our design I wouldn’t be so busy all the time</p>
           <p>
             <span class="author">Alyssa Fox</small><br>
             <span class="title">Founder, Fox Tax Service</small>
