--- a/src/assets/_scss/main.scss
+++ b/src/assets/_scss/main.scss
@@ -26,7 +26,7 @@
 @import "elements/quote";
 @import "elements/related_projects";
 @import "elements/testimonials";
-// @import "elements/transitions";
+@import "elements/transitions";
 // @import "elements/page_intro";
 @import "elements/page_transition";
 @import "elements/parallax";
