--- a/src/assets/_scss/elements/_quote.scss
+++ b/src/assets/_scss/elements/_quote.scss
@@ -4,6 +4,22 @@
   font-weight: 800;
   line-height: 1.4;
   margin-bottom: 0;
+  position: relative;
+  &::before {
+    content: '“';
+    display: block;
+    position: absolute;
+    line-height: 1;
+
+  }
+  &::before {
+    left: 0;
+    top: 7px;
+    transform: translate3d(-100%,0,0);
+  }
+  &::after {
+    content: '”';
+  }
   @include media-breakpoint-up(lg) {
     font-size: 2.5rem;
   }
