--- a/src/assets/_scss/base/_forms.scss
+++ b/src/assets/_scss/base/_forms.scss
@@ -190,14 +190,14 @@
     }
     .c-editor {
       padding-left: 0;
-      padding-right: 0;
+      // padding-right: 0;
       background-color: transparent;
       input,
       textarea {
         appearance: none;
         padding: 10px;
-        background-color: $light;
-        border: 1px solid $gray-300;
+        background-color: $white;
+        border: 1px solid $gray-400;
       }
     }
     // .c-field {
