--- a/src/_includes/scripts.html
+++ b/src/_includes/scripts.html
@@ -1,5 +1,20 @@
+<!-- Analytics -->
+{% include analytics.html %}
+
 <!-- Javascript -->
-<script src="{{ '/assets/js/main.js' | prepend: site.baseurl }}"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" crossorigin="anonymous" defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"
+  defer></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"
+  defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js" crossorigin="anonymous" defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js" crossorigin="anonymous"
+  defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"
+  crossorigin="anonymous" defer></script>
+<!-- <script src="{{ '/assets/js/head.js' | prepend: site.baseurl }}" defer></script> -->
+<script src="{{ '/assets/js/main.js' | prepend: site.baseurl }}" defer></script>
+
 <script>
   // if (navigator.serviceWorker) {
   // 	navigator.serviceWorker.register('/serviceworker.js')
@@ -11,6 +26,3 @@
   // 	});
   // }
 </script>
-
-<!-- Analytics -->
-{% include analytics.html %}
