--- a/src/_includes/photo-grid.html
+++ b/src/_includes/photo-grid.html
@@ -16,7 +16,7 @@
        data-image="{{ project1.featured_image | default: site.placeholders.aspect-4x3 }}"
        data-transition="ProjectTransition"
        class="expand-full-screen position-relative d-block">
-        <div class="bg-image aspect-16x9" style="background-image: url({{ project1.featured_image | default: site.placeholders.aspect-4x3 }})"></div>
+        <div class="bg-image aspect-16x9 lazy-load" data-image="{{ project1.featured_image | default: site.placeholders.aspect-4x3 }}"></div>
         <div class="hover-overlay">
           <div class="overlay-content">
             <p class="hover-primary-text">{{ project1.quote }}</p>
@@ -32,7 +32,7 @@
        data-image="{{ project2.featured_image | default: site.placeholders.aspect-4x3 }}"
        data-transition="ProjectTransition"
        class="expand-full-screen position-relative d-block">
-      <div class="bg-image aspect-16x9" style="background-image: url({{ project2.featured_image | default: site.placeholders.aspect-4x3 }})"></div>
+      <div class="bg-image aspect-16x9 lazy-load" data-image="{{ project2.featured_image | default: site.placeholders.aspect-4x3 }}"></div>
       <div class="hover-overlay">
         <div class="overlay-content">
           <p class="hover-primary-text">{{ project2.quote }}</p>
@@ -46,7 +46,7 @@
        data-image="{{ project3.featured_image | default: site.placeholders.aspect-4x3 }}"
        data-transition="ProjectTransition"
        class="expand-full-screen position-relative d-block">
-      <div class="bg-image aspect-16x9" style="background-image: url({{ project3.featured_image | default: site.placeholders.aspect-4x3 }})"></div>
+      <div class="bg-image aspect-16x9 lazy-load" data-image="{{ project3.featured_image | default: site.placeholders.aspect-4x3 }}"></div>
       <div class="hover-overlay">
         <div class="overlay-content">
           <p class="hover-primary-text">{{ project3.quote }}</p>
