script load performance testing

--- a/src/_includes/scripts.html
+++ b/src/_includes/scripts.html
@@ -7,11 +7,11 @@
   defer></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"
   defer></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js" crossorigin="anonymous" defer></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js" crossorigin="anonymous" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js" crossorigin="anonymous"
   defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"
-  crossorigin="anonymous" defer></script>
+  crossorigin="anonymous" defer></script> -->
 <!-- <script src="{{ '/assets/js/head.js' | prepend: site.baseurl }}" defer></script> -->
 <script src="{{ '/assets/js/main.js' | prepend: site.baseurl }}" defer></script>
 
