--- a/src/_includes/scripts.html
+++ b/src/_includes/scripts.html
@@ -14,6 +14,9 @@
   defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"
   crossorigin="anonymous" defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.0/js.cookie.min.js"
+  crossorigin="anonymous" defer></script>
+
 <!-- <script src="{{ '/assets/js/head.js' | prepend: site.baseurl }}" defer></script> -->
 <script src="{{ '/assets/js/main.js' | prepend: site.baseurl }}" defer></script>
 
