background image lazy loading

--- a/src/assets/_scss/main.scss
+++ b/src/assets/_scss/main.scss
@@ -34,6 +34,7 @@
 // Components
 @import "components/mosaic";
 @import "components/weather_icons";
+@import "components/lazy_load";
 
 // Import view specific styles
 @import "pages/focus";
