--- a/src/assets/_scss/base/_animations.scss
+++ b/src/assets/_scss/base/_animations.scss
@@ -89,6 +89,11 @@
   }
 }
 
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 // .slide-up-1 {
 //   opacity: 0;
 // }
