New header, footer, new homepage layout

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer id="page-footer">
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-lg-6">
         <div class="content">
           <a href="/" class="logo-footer">
             <img src="/assets/img/ocupop_footer_logo_grey.png" class="img-fluid" alt="Ocupop Logo">
@@ -9,7 +9,12 @@
           </a> 
         </div>
       </div>
-      <div class="col-6 col-md-2 ml-auto">
+      <div class="col-lg-6">
+        <div class="content text-white">
+          {% include components/cta-contact.html %}
+        </div>
+      </div>
+      <!-- <div class="col-6 col-md-2 ml-auto">
         <div class="content">
           <div class="d-flex">
             <ul class="nav flex-column">
@@ -42,7 +47,7 @@
             </ul> 
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </footer>
