--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,69 +1,67 @@
 <header id="page-header">
-  <div class="container">
-    <nav id="mainnav" class="navbar navbar-expand-md">
-      <a class="navbar-brand" href="/"
-        ><img
-          src="/assets/img/logo-horizontal.svg"
-          class="img-fluid"
-          alt="{{ site.title }}"
-      /></a>
-      <button
-        class="navbar-toggler collapsed"
-        type="button"
-        data-toggle="collapse"
-        data-target="#primarynav"
-        aria-controls="primarynav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="sr-only">Toggle navigation</span>
-        <span class="bar close-one"></span> <span class="bar close-two"></span>
-        <span class="bar close-three"></span>
-      </button>
+  <nav id="mainnav" class="navbar">
+    <a class="navbar-brand" href="/"
+      ><img
+        src="/assets/img/logo-horizontal.svg"
+        class="img-fluid"
+        alt="{{ site.title }}"
+    /></a>
+    <button
+      class="navbar-toggler collapsed"
+      type="button"
+      data-toggle="collapse"
+      data-target="#primarynav"
+      aria-controls="primarynav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="sr-only">Toggle navigation</span>
+      <span class="bar close-one"></span> <span class="bar close-two"></span>
+      <span class="bar close-three"></span>
+    </button>
 
-      <div
-        class="collapse navbar-collapse justify-content-md-end"
-        id="primarynav"
-      >
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a
-              class="nav-link{% if page.url contains 'about' %} active{% endif %}"
-              href="/about"
-              >About {% if page.url contains 'about' %}<span class="sr-only"
-                >(current)</span
-              >{% endif %}</a
-            >
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link{% if page.url contains 'work' %} active{% endif %}"
-              href="/work"
-              >Work {% if page.url contains 'work' %}<span class="sr-only"
-                >(current)</span
-              >{% endif %}</a
-            >
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link{% if page.url contains 'focus' %} active{% endif %}"
-              href="/focus"
-              >Focus {% if page.url contains 'focus' %}<span class="sr-only"
-                >(current)</span
-              >{% endif %}</a
-            >
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link{% if page.url contains 'contact' %} active{% endif %}"
-              href="/contact"
-              >Contact {% if page.url contains 'contact' %}<span class="sr-only"
-                >(current)</span
-              >{% endif %}</a
-            >
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </div>
+    <div
+      class="collapse navbar-collapse collapsed"
+      id="primarynav"
+    >
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a
+            class="nav-link{% if page.url contains 'about' %} active{% endif %}"
+            href="/about"
+            >About {% if page.url contains 'about' %}<span class="sr-only"
+              >(current)</span
+            >{% endif %}</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link{% if page.url contains 'work' %} active{% endif %}"
+            href="/work"
+            >Work {% if page.url contains 'work' %}<span class="sr-only"
+              >(current)</span
+            >{% endif %}</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link{% if page.url contains 'focus' %} active{% endif %}"
+            href="/focus"
+            >Focus {% if page.url contains 'focus' %}<span class="sr-only"
+              >(current)</span
+            >{% endif %}</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link{% if page.url contains 'contact' %} active{% endif %}"
+            href="/contact"
+            >Contact {% if page.url contains 'contact' %}<span class="sr-only"
+              >(current)</span
+            >{% endif %}</a
+          >
+        </li>
+      </ul>
+    </div>
+  </nav>
 </header>
