--- a/src/_includes/photo-grid.html
+++ b/src/_includes/photo-grid.html
@@ -8,15 +8,22 @@
   {% if forloop.index == 3 %}
     {% assign project3 = site.projects | where: "slug", project | first %}
   {% endif %}
+  {% if forloop.index == 4 %}
+    {% assign project4 = site.projects | where: "slug", project | first %}
+  {% endif %}
+  {% if forloop.index == 5 %}
+    {% assign project5 = site.projects | where: "slug", project | first %}
+  {% endif %}
+  {% if forloop.index == 6 %}
+    {% assign project6 = site.projects | where: "slug", project | first %}
+  {% endif %}
+
 {% endfor %}
 
-<div class="row slide-up-1 no-gutters">
-  <div class="col-12">
-    <a href="{{ project1.url }}"
-       data-image="{{ project1.featured_image | default: site.placeholders.aspect-4x3 }}"
-       data-transition="ProjectTransition"
-       class="expand-full-screen position-relative d-block">
-        <div class="bg-image aspect-16x9 lazy-load" data-image="{{ project1.featured_image | default: site.placeholders.aspect-4x3 }}"></div>
+<div class="row no-gutters">
+  <div class="col-lg-6">
+    <a href="{{ project1.url }}" class="position-relative d-block">
+        <div class="bg-image aspect-1x1 lazy-load" data-image="{{ project1.featured_image | default: site.placeholders.aspect-4x3 }}"></div>
         <div class="hover-overlay">
           <div class="overlay-content">
             <p class="hover-primary-text">{{ project1.quote }}</p>
@@ -25,14 +32,10 @@
         </div>
     </a>
   </div>
-</div>
-<div class="row slide-up-1 no-gutters">
   <div class="col-lg-6">
-    <a href="{{ project2.url }}"
-       data-image="{{ project2.featured_image | default: site.placeholders.aspect-4x3 }}"
-       data-transition="ProjectTransition"
-       class="expand-full-screen position-relative d-block">
-      <div class="bg-image aspect-16x9 lazy-load" data-image="{{ project2.featured_image | default: site.placeholders.aspect-4x3 }}"></div>
+    <a href="{{ project2.url }}" class="position-relative d-block">
+      <div class="bg-image aspect-2x1 lazy-load"
+        data-image="{{ project2.featured_image | default: site.placeholders.aspect-4x3 }}"></div>
       <div class="hover-overlay">
         <div class="overlay-content">
           <p class="hover-primary-text">{{ project2.quote }}</p>
@@ -40,17 +43,49 @@
         </div>
       </div>
     </a>
-  </div>
-  <div class="col-lg-6">
-    <a href="{{ project3.url }}"
-       data-image="{{ project3.featured_image | default: site.placeholders.aspect-4x3 }}"
-       data-transition="ProjectTransition"
-       class="expand-full-screen position-relative d-block">
-      <div class="bg-image aspect-16x9 lazy-load" data-image="{{ project3.featured_image | default: site.placeholders.aspect-4x3 }}"></div>
+    <a href="{{ project3.url }}" class="position-relative d-block">
+      <div class="bg-image aspect-2x1 lazy-load"
+        data-image="{{ project3.featured_image | default: site.placeholders.aspect-4x3 }}"></div>
       <div class="hover-overlay">
         <div class="overlay-content">
           <p class="hover-primary-text">{{ project3.quote }}</p>
           <p class="hover-secondary-text">{{ project3.client }}</p>
+        </div>
+      </div>
+    </a>
+  </div>
+</div>
+<div class="row no-gutters">
+  <div class="col-lg-6">
+    <a href="{{ project4.url }}" class="position-relative d-block">
+      <div class="bg-image aspect-2x1 lazy-load"
+        data-image="{{ project4.featured_image | default: site.placeholders.aspect-4x3 }}"></div>
+      <div class="hover-overlay">
+        <div class="overlay-content">
+          <p class="hover-primary-text">{{ project4.quote }}</p>
+          <p class="hover-secondary-text">{{ project4.client }}</p>
+        </div>
+      </div>
+    </a>
+    <a href="{{ project5.url }}" class="position-relative d-block">
+      <div class="bg-image aspect-2x1 lazy-load"
+        data-image="{{ project5.featured_image | default: site.placeholders.aspect-4x3 }}"></div>
+      <div class="hover-overlay">
+        <div class="overlay-content">
+          <p class="hover-primary-text">{{ project5.quote }}</p>
+          <p class="hover-secondary-text">{{ project5.client }}</p>
+        </div>
+      </div>
+    </a>
+  </div>
+  <div class="col-lg-6">
+    <a href="{{ project6.url }}" class="position-relative d-block">
+      <div class="bg-image aspect-1x1 lazy-load"
+        data-image="{{ project6.featured_image | default: site.placeholders.aspect-4x3 }}"></div>
+      <div class="hover-overlay">
+        <div class="overlay-content">
+          <p class="hover-primary-text">{{ project6.quote }}</p>
+          <p class="hover-secondary-text">{{ project6.client }}</p>
         </div>
       </div>
     </a>
