--- a/src/_includes/testimonials.html
+++ b/src/_includes/testimonials.html
@@ -1,13 +1,7 @@
-{% if page.testimonial %}
 <section id="testimonial" class="bg-secondary text-dark">
   <div class="container">
     <div class="row align-items-center">
-      <div class="col-lg-6">
-        <div class="content">
-          <p class="h3">What the cool kids say <i class="icon-quote"></i></p>
-        </div>
-      </div>
-      <div class="col-lg-6">
+      <div class="col-lg-10">
         {% if page.testimonial.quote %}
         <div class="content ">
           <p class="quote">{{ page.testimonial.quote }}</p>
@@ -20,8 +14,10 @@
         <div class="content">
           <p class="quote">I get complimented on our website and materials constantly. In fact, I always joke that if Ocupop hadn’t done such a great job with our design I wouldn’t be so busy all the time</p>
           <p>
-            <span class="author">Alyssa Fox</small><br>
-            <span class="title">Founder, Fox Tax Service</small>
+            <small>
+              <span class="author">Alyssa Fox</span><br>
+              <span class="title">Founder, Fox Tax Service</span>
+            </small>
           </p>
         </div>  
         {% endif %}
@@ -29,4 +25,3 @@
     </div>
   </div>
 </section>
-{% endif %}
