--- a/src/assets/_scss/main.scss
+++ b/src/assets/_scss/main.scss
@@ -35,6 +35,8 @@
 @import "components/mosaic";
 @import "components/weather_icons";
 @import "components/lazy_load";
+@import "components/project_nav";
+@import "components/team_photo_grid";
 
 // Import view specific styles
 @import "pages/focus";
