--- a/src/assets/_scss/_settings.scss
+++ b/src/assets/_scss/_settings.scss
@@ -35,7 +35,7 @@ $body-bg: $white;
 $body-color: $dark;
 
 $font-family-base: "Berlingske Serif Regular", Georgia, serif;
-$font-family-secondary: "commuter-sans", Helvetica, Arial, sans-serif;
+$font-family-secondary: "commuters-sans", Helvetica, Arial, sans-serif;
 $font-family-base-bold: "Berlingske Serif ExtraBold", Georgia, serif;
 
 // $font-family-forms: "motiva-sans", Helvetica, Arial, sans-serif;
