--- a/src/assets/_scss/base/_utilities.scss
+++ b/src/assets/_scss/base/_utilities.scss
@@ -80,6 +80,11 @@
   }
 }
 
+.sticky-top {
+  top: 50px;
+  z-index: 997;
+}
+
 // Color Utilities
 .bg-black {
   background-color: $black !important;
