--- a/src/assets/_scss/base/_page_header.scss
+++ b/src/assets/_scss/base/_page_header.scss
@@ -38,8 +38,11 @@
       overflow: hidden;
       font-family: $font-family-base;
       font-size: 20px;
-      font-weight: 600;
+      font-weight: 400;
+      padding: 15px 0;
+      @include animation(fadeIn, 0.5s, 0.4s);
       @include media-breakpoint-up(lg) {
+        padding: 0;
         &::after {
         content: "";
         position: absolute;
@@ -48,13 +51,12 @@
         left: -80%;
         width: 100%;
         height: 2px;
-        background-color: $black;
+        background-color: $orange;
           @include transition(0.5s);
         }
         &:hover,
         &.active {
           &::after {
-            background-color: $orange;
             left: 0;
           }
         }
