--- a/src/assets/_scss/main.scss
+++ b/src/assets/_scss/main.scss
@@ -37,6 +37,7 @@
 @import "components/lazy_load";
 @import "components/project_nav";
 @import "components/team_photo_grid";
+@import "components/project_grid";
 
 // Import view specific styles
 @import "pages/focus";
