--- a/src/assets/_scss/_settings.scss
+++ b/src/assets/_scss/_settings.scss
@@ -11,16 +11,20 @@ $gray-900: #212529 !default;
 $black: #000000 !default;
 
 $blue: #67dce5;
+$blue-dark: #0a23f4;
 $indigo: #6610f2 !default;
-$purple: #6f42c1 !default;
+$purple: #6776cf;
 $pink: #e83e8c !default;
 $red: #dc3545 !default;
 $orange: #ff9560;
+$orange-dark: #eb6547;
 $yellow: #f5c938;
 $green: #87a63e;
+$green-dark: #006733;
 $teal: #20c997 !default;
 $cyan: #7dd0e8 !default;
 $navy: #18374b;
+$khaki: #cdac60;
 
 $primary: $blue;
 $secondary: $orange;
