--- a/src/assets/_scss/base/_animations.scss
+++ b/src/assets/_scss/base/_animations.scss
@@ -89,4 +89,35 @@
   }
 }
 
+@keyframes slideLeft {
+  from {
+    transform: translateX(-10%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+
+//expand
+@keyframes expand {
+  from {
+    width: 0;
+    height: 0;
+    top: 50%;
+    left: 50%;
+    opacity: 0;
+    padding: 0;
+  }
+  to {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 1;
+    padding: 40px;
+  }
+}
 
