--- a/src/assets/_scss/elements/_hover_overlay.scss
+++ b/src/assets/_scss/elements/_hover_overlay.scss
@@ -10,24 +10,46 @@
   width: 100%;
   height: 100%;
   background-color: rgba($blue, 0.9);
-  text-align: center;
   padding: 40px;
   cursor: pointer;
   // pointer-events: auto;
   .hover-primary-text {
-    font-family: $font-family-base-bold;
-    font-size: 1.8rem;
+    font-family: $font-family-secondary;
+    text-transform: uppercase;
+    font-size: 1.6rem;
+    font-weight: 600;
     line-height: 1.4;
     margin-bottom: 0;
     color: $white;
   }
   .hover-secondary-text {
-    font-family: $font-family-secondary;
+    font-family: $font-family-base;
     font-size: 0.9rem;
     margin-bottom: 0;
     color: $white;
   }
+  &.overlay-purple {
+    background-color: rgba($purple, 0.9);
+  }
+  &.overlay-green-dark {
+    background-color: rgba($green-dark, 0.9);
+  }
+  &.overlay-orange {
+    background-color: rgba($orange, 0.9);
+  }
+  &.overlay-khaki {
+    background-color: rgba($khaki, 0.9);
+  }
+  &.overlay-blue-dark {
+    background-color: rgba($blue-dark, 0.9);
+  }
   &:hover {
-    opacity: 1;
+    @include animation(expand, 0.5s);
+    .hover-primary-text {
+      @include animation(slideLeft, 0.5s, 0.5s);
+    }
+    .hover-secondary-text {
+      @include animation(slideLeft, 0.5s, 0.8s);
+    }
   }
 }
