--- a/src/assets/_scss/pages/_project.scss
+++ b/src/assets/_scss/pages/_project.scss
@@ -6,6 +6,7 @@
   border-bottom: 1px solid $primary;
   margin-top: 30px;
   margin-bottom: 8px;
+  color: $gray-400;
   p {
     margin-bottom: 8px;
   }
@@ -16,8 +17,10 @@
     margin-bottom: 0;
   }
   h3 {
-    font-family: $font-family-base;
+    font-family: $font-family-secondary;
     font-size: 1.3rem;
+    text-transform: uppercase;
+    font-weight: 400;
   }
 }
 
