about page, contact page, focus page, homepage team image grid, work page, footer

--- a/src/_includes/good-work.html
+++ b/src/_includes/good-work.html
@@ -5,7 +5,7 @@
         <div class="content editable">
           <p class="quote">
             We do good work for good people and they make referrals. For 20
-            years!”
+            years!
           </p>
           <p class="quote-author">
             <strong>Michael Nieling</strong><br />Founder and Creative Director
@@ -23,7 +23,6 @@
             commitment...always aspiring to the ideal that we work WITH you, not
             for you.
           </p>
-          <a href="#" class="btn btn-inline">Learn More...</a>
         </div>
       </div>
     </div>
