--- a/src/_includes/scripts.html
+++ b/src/_includes/scripts.html
@@ -3,6 +3,7 @@
 
 <!-- Javascript -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" crossorigin="anonymous" defer></script>
+<!-- <script src="{{ '/assets/js/vendor/gridrotator.js' | prepend: site.baseurl }}" defer></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"
   defer></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"
@@ -16,6 +17,7 @@
   crossorigin="anonymous" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.0/js.cookie.min.js"
   crossorigin="anonymous" defer></script>
+
 
 <!-- <script src="{{ '/assets/js/head.js' | prepend: site.baseurl }}" defer></script> -->
 <script src="{{ '/assets/js/main.js' | prepend: site.baseurl }}" defer></script>
