--- a/src/assets/_scss/main.scss
+++ b/src/assets/_scss/main.scss
@@ -42,6 +42,7 @@
 // Import view specific styles
 @import "pages/focus";
 @import "pages/home";
+@import "pages/about";
 @import "pages/home_animation";
 @import "pages/project";
 @import "pages/team_member";
