--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -4,9 +4,12 @@
       <div class="col-lg-6">
         <div class="content">
           <a href="/" class="logo-footer">
+            <img src="/assets/img/logo-white.svg" class="img-fluid" alt="Ocupop logo">
+          </a>
+          <!-- <a href="/" class="logo-footer">
             <img src="/assets/img/ocupop_footer_logo_grey.png" class="img-fluid" alt="Ocupop Logo">
             <img src="/assets/img/ocupop_footer_logo_color.png" class="img-fluid" alt="Ocupop Logo">
-          </a> 
+          </a>  -->
         </div>
       </div>
       <div class="col-lg-6">
