--- a/src/_includes/photo-grid.html
+++ b/src/_includes/photo-grid.html
@@ -22,7 +22,7 @@
 
 <div class="row no-gutters">
   <div class="col-lg-6">
-    <a href="{{ project1.url }}" class="position-relative d-block">
+    <a href="{{ project1.url }}" class="project-item">
         <div class="bg-image aspect-1x1 lazy-load" data-image="{{ project1.featured_image | default: site.placeholders.aspect-4x3 }}"></div>
         <div class="hover-overlay overlay-purple">
           <div class="overlay-content">
@@ -33,7 +33,7 @@
     </a>
   </div>
   <div class="col-lg-6">
-    <a href="{{ project2.url }}" class="position-relative d-block">
+    <a href="{{ project2.url }}" class="project-item">
       <div class="bg-image aspect-2x1 lazy-load"
         data-image="{{ project2.featured_image | default: site.placeholders.aspect-4x3 }}"></div>
       <div class="hover-overlay overlay-green-dark">
@@ -44,7 +44,7 @@
         </div>
       </div>
     </a>
-    <a href="{{ project3.url }}" class="position-relative d-block">
+    <a href="{{ project3.url }}" class="project-item">
       <div class="bg-image aspect-2x1 lazy-load"
         data-image="{{ project3.featured_image | default: site.placeholders.aspect-4x3 }}"></div>
       <div class="hover-overlay overlay-orange">
@@ -59,7 +59,7 @@
 </div>
 <div class="row no-gutters">
   <div class="col-lg-6">
-    <a href="{{ project4.url }}" class="position-relative d-block">
+    <a href="{{ project4.url }}" class="project-item">
       <div class="bg-image aspect-2x1 lazy-load"
         data-image="{{ project4.featured_image | default: site.placeholders.aspect-4x3 }}"></div>
       <div class="hover-overlay">
@@ -70,7 +70,7 @@
         </div>
       </div>
     </a>
-    <a href="{{ project5.url }}" class="position-relative d-block">
+    <a href="{{ project5.url }}" class="project-item">
       <div class="bg-image aspect-2x1 lazy-load"
         data-image="{{ project5.featured_image | default: site.placeholders.aspect-4x3 }}"></div>
       <div class="hover-overlay overlay-blue-dark">
@@ -83,7 +83,7 @@
     </a>
   </div>
   <div class="col-lg-6">
-    <a href="{{ project6.url }}" class="position-relative d-block">
+    <a href="{{ project6.url }}" class="project-item">
       <div class="bg-image aspect-1x1 lazy-load"
         data-image="{{ project6.featured_image | default: site.placeholders.aspect-4x3 }}"></div>
       <div class="hover-overlay overlay-khaki">
