--- a/src/assets/_scss/base/_forms.scss
+++ b/src/assets/_scss/base/_forms.scss
@@ -289,6 +289,70 @@
   }
 }
 
+#contact-page-form {
+  &.cognito {
+    .c-forms-form {
+      .c-label {
+        label {
+          position: absolute;
+          width: 1px;
+          height: 1px;
+          padding: 0;
+          margin: -1px;
+          overflow: hidden;
+          clip: rect(0,0,0,0);
+          border: 0;
+        }
+      }
+      .c-editor {
+        input,
+        input[type="text"],
+        textarea {
+          padding: 10px 0;
+          border: 0;
+          border-bottom: 1px solid $dark;
+        }
+      }
+
+      font-family: $font-family-secondary;
+    color: $dark;
+    position: relative;
+    overflow: hidden;
+    padding: 0;
+    text-transform: uppercase;
+    #c-submit-button {
+      padding: 10px 0;
+      border: 0;
+      overflow: hidden;
+      position: relative;
+      &:hover {
+        background-color: transparent;
+      }
+      @include media-breakpoint-up(lg) {
+        &::after {
+        content: "";
+        position: absolute;
+        display: block;
+        bottom: 0;
+        left: -80%;
+        width: 100%;
+        height: 2px;
+        background-color: $orange;
+          @include transition(0.5s);
+        }
+        &:hover,
+        &.active {
+          &::after {
+            left: 0;
+          }
+        }
+      }
+    }
+    
+    }
+  }
+}
+
 .project-review {
   .cognito {
     .c-choice-option-header {
