--- a/src/assets/_scss/base/_page_footer.scss
+++ b/src/assets/_scss/base/_page_footer.scss
@@ -13,25 +13,25 @@
 .logo-footer {
   display: block;
   position: relative;
-  min-height: 42px;
+  width: 65px;
 
-  img {
-    &:nth-of-type(1) {
-      position: absolute;
-      left: 20px;
-      top: 0;
-      width: 190px;
-    }
-    &:nth-of-type(2) {
-      width: 190px;
-      position: absolute;
-      top: 0;
-      left: 20px;
-      opacity: 0;
-      @include transition(opacity, 0.4s);
-      &:hover {
-        opacity: 1;
-      }
-    }
-  }
+  // img {
+  //   &:nth-of-type(1) {
+  //     position: absolute;
+  //     left: 20px;
+  //     top: 0;
+  //     width: 190px;
+  //   }
+  //   &:nth-of-type(2) {
+  //     width: 190px;
+  //     position: absolute;
+  //     top: 0;
+  //     left: 20px;
+  //     opacity: 0;
+  //     @include transition(opacity, 0.4s);
+  //     &:hover {
+  //       opacity: 1;
+  //     }
+  //   }
+  // }
 }
