--- a/src/assets/_scss/components/_team_photo_grid.scss
+++ b/src/assets/_scss/components/_team_photo_grid.scss
@@ -1,4 +1,4 @@
-#team-photo-grid {
+.team-photo-grid {
   display: flex;
   height: 290px;
   @include media-breakpoint-down(lg) {
@@ -16,4 +16,26 @@
       padding-top: 0;
     }
   }
+}
+
+#rotator {
+  width: 100%;
+  list-style-type: none;
+  height: 290px;
+  display: flex;
+  padding-left: 0;
+  li {
+    width: 25%;
+    position: relative;
+  }
+}
+
+.rotator-image{
+  position: absolute;
+  display: none;
+  width: 100%;
+  height: 290px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
