--- a/src/assets/_scss/pages/_about.scss
+++ b/src/assets/_scss/pages/_about.scss
@@ -1,8 +1,5 @@
-.project-grid {
-  .project-item {
-    cursor: pointer;
-    position: relative;
-    display: block;
+#team {
+  a {
     &:hover {
       .hover-overlay {
         @include animation(expand, 0.5s);
@@ -12,14 +9,6 @@
         .hover-secondary-text {
           @include animation(slideLeft, 0.5s, 0.8s);
         }
-      }
-    }
-  }
-  @include media-breakpoint-down(md) {
-    .bg-image {
-      &.aspect-2x1,
-      &.aspect-1x1 {
-        padding-top: 55%;
       }
     }
   }
