--- a/src/assets/_scss/base/_forms.scss
+++ b/src/assets/_scss/base/_forms.scss
@@ -327,6 +327,7 @@
       position: relative;
       &:hover {
         background-color: transparent;
+        color: $dark;
       }
       @include media-breakpoint-up(lg) {
         &::after {
@@ -401,3 +402,35 @@
 //     }
 //   }
 // }
+
+
+// Preloader behavior for cognito form
+.preloader {
+  display: none;
+  width: 100%;
+  text-align: center;
+  &::before {
+    content: '';
+    display: block;
+    z-index: 1;
+    border: 3px solid $gray-100;
+    border-top: 3px solid $gray-300;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: spin 2s linear infinite;
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+  }
+}
+
+/* Override the default invisibility if the preloader doesn't have a form after it. */
+.preloader:last-child {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
