--- a/src/assets/_scss/components/_team_photo_grid.scss
+++ b/src/assets/_scss/components/_team_photo_grid.scss
@@ -24,9 +24,29 @@
   height: 290px;
   display: flex;
   padding-left: 0;
+  margin-bottom: 0;
   li {
     width: 25%;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &::before {
+      content: '';
+      display: block;
+      z-index: 1;
+      border: 3px solid $gray-300;
+      border-top: 3px solid $gray-100;
+      border-radius: 50%;
+      width: 30px;
+      height: 30px;
+      animation: spin 2s linear infinite;
+
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
+    }
   }
 }
 
@@ -38,4 +58,9 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+  
 }
