contact form focus styles

--- a/src/assets/_scss/base/_forms.scss
+++ b/src/assets/_scss/base/_forms.scss
@@ -311,6 +311,10 @@
           padding: 10px 0;
           border: 0;
           border-bottom: 1px solid $dark;
+          @include transition(padding, .3s);
+          &:focus {
+            padding: 10px;
+          }
         }
       }
 
