--- a/src/assets/_scss/base/_forms.scss
+++ b/src/assets/_scss/base/_forms.scss
@@ -327,35 +327,40 @@
       overflow: hidden;
       padding: 0;
       text-transform: uppercase;
-    #c-submit-button {
-      padding: 10px 0;
-      border: 0;
-      overflow: hidden;
-      position: relative;
-      &:hover {
-        background-color: transparent;
-        color: $dark;
-      }
-      @include media-breakpoint-up(lg) {
-        &::after {
-        content: "";
-        position: absolute;
-        display: block;
-        bottom: 0;
-        left: -80%;
-        width: 100%;
-        height: 2px;
-        background-color: $orange;
-          @include transition(0.5s);
+      #c-submit-button {
+        padding: 10px 0;
+        border: 0;
+        overflow: hidden;
+        position: relative;
+        &:hover {
+          background-color: transparent;
+          color: $dark;
         }
-        &:hover,
-        &.active {
+        @include media-breakpoint-up(lg) {
           &::after {
-            left: 0;
+          content: "";
+          position: absolute;
+          display: block;
+          bottom: 0;
+          left: -80%;
+          width: 100%;
+          height: 2px;
+          background-color: $orange;
+            @include transition(0.5s);
+          }
+          &:hover,
+          &.active {
+            &::after {
+              left: 0;
+            }
           }
         }
       }
-    }
+
+      .c-validation {
+        margin-left: 0;
+        border-radius: 0;
+      }
     
     }
   }
