project layouts and assets

--- a/src/_layouts/project.html
+++ b/src/_layouts/project.html
@@ -19,10 +19,12 @@ layout: default
     </div>
   </div>
 </section>
+{% if project.hero_image %}
 <div class="parallax-window">
   <div class="bg-image"
     style="background-image: url({{ project.hero_image | default: site.placeholders.hero }});"></div>
 </div>
+{% endif %}
 <div class="project-content">
   {{ page.content }}
 </div>
