--- a/src/assets/_scss/_settings.scss
+++ b/src/assets/_scss/_settings.scss
@@ -11,7 +11,9 @@ $gray-900: #212529 !default;
 $black: #000000 !default;
 
 $blue: #67dce5;
+
 $blue-dark: #0a23f4;
+$blue-med: #7DCFE7;
 $indigo: #6610f2 !default;
 $purple: #6776cf;
 $pink: #e83e8c !default;
@@ -24,6 +26,7 @@ $green-dark: #006733;
 $teal: #20c997 !default;
 $cyan: #7dd0e8 !default;
 $navy: #18374b;
+$navy-dark: #0C1F2B;
 $khaki: #cdac60;
 
 $primary: $blue;
