--- a/src/assets/_scss/base/_utilities.scss
+++ b/src/assets/_scss/base/_utilities.scss
@@ -101,6 +101,14 @@
   background-color: $navy;
 }
 
+.bg-navy-dark {
+  background-color: $navy-dark;
+}
+
+.bg-blue-med {
+  background-color: $blue-med;
+}
+
 .bg-yellow {
   background-color: $yellow;
 }
