--- a/src/assets/_scss/pages/_project.scss
+++ b/src/assets/_scss/pages/_project.scss
@@ -44,3 +44,13 @@
     }
   }
 }
+
+//project specific styles
+#burton-icons {
+  img {
+    width: 150px;
+    max-width: 100%;
+    margin: 0 auto;
+    display: block;
+  }
+}
