project assets, editable regions

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -13,7 +13,7 @@
         </div>
       </div>
       <div class="col-lg-6">
-        <div class="content text-white">
+        <div class="text-white">
           {% include components/cta-contact.html %}
         </div>
       </div>
