--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -43,7 +43,7 @@
             >{% endif %}</a
           >
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a
             class="nav-link{% if page.url contains 'focus' %} active{% endif %}"
             href="/focus"
@@ -51,7 +51,7 @@
               >(current)</span
             >{% endif %}</a
           >
-        </li>
+        </li> -->
         <li class="nav-item">
           <a
             class="nav-link{% if page.url contains 'contact' %} active{% endif %}"
