--- a/src/assets/_scss/base/_utilities.scss
+++ b/src/assets/_scss/base/_utilities.scss
@@ -46,6 +46,7 @@
   background-size: cover;
   background-position: center center;
   width: 100%;
+  position: relative;
   &.aspect-5x7 {
     padding-top: 120%;
   }
