--- a/src/assets/_scss/components/_team_photo_grid.scss
+++ b/src/assets/_scss/components/_team_photo_grid.scss
@@ -25,12 +25,20 @@
   display: flex;
   padding-left: 0;
   margin-bottom: 0;
+  @include media-breakpoint-down(md) {
+    height: auto;
+    flex-wrap: wrap;
+  }
   li {
     width: 25%;
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
+    @include media-breakpoint-down(md) {
+      width: 50%;
+      height: 225px;
+    }
     &::before {
       content: '';
       display: block;
@@ -62,5 +70,7 @@
   align-items: center;
   justify-content: center;
   z-index: 10;
-  
+  @include media-breakpoint-down(md) {
+    height: 225px;
+  }
 }
