--- a/src/assets/_scss/main.scss
+++ b/src/assets/_scss/main.scss
@@ -38,6 +38,7 @@
 @import "components/project_nav";
 @import "components/team_photo_grid";
 @import "components/project_grid";
+@import "components/image_credit";
 
 // Import view specific styles
 @import "pages/focus";
