--- a/src/assets/_scss/elements/_cta_contact.scss
+++ b/src/assets/_scss/elements/_cta_contact.scss
@@ -22,9 +22,15 @@
       }
     }
   }
-  .quote {
-    &::before {
-      top: 0;
-    }
+}
+
+.weather-zone {
+  display: flex;
+  align-items: center;
+  justify-content: between;
+  padding: 25px 0;
+  border-top: 1px solid $white;
+  &:last-of-type {
+    border-bottom: 1px solid $white;
   }
 }
