homepage assets and social share image

--- a/src/_includes/team-photo-grid.html
+++ b/src/_includes/team-photo-grid.html
@@ -27,11 +27,14 @@
     <div class="team-photo rotator-image" style="background-image: url(/assets/img/culture/culture-11.jpg)"></div>
     <div class="team-photo rotator-image" style="background-image: url(/assets/img/culture/culture-12.jpg)"></div>
     <div class="team-photo rotator-image" style="background-image: url(/assets/img/culture/culture-15.jpg)"></div>
+    <div class="team-photo rotator-image" style="background-image: url(/assets/img/culture/culture-03.jpg)"></div>
   </li>
   <li>
     <div class="team-photo rotator-image" style="background-image: url(/assets/img/culture/culture-16.jpg)"></div>
     <div class="team-photo rotator-image" style="background-image: url(/assets/img/culture/culture-17.jpg)"></div>
     <div class="team-photo rotator-image" style="background-image: url(/assets/img/culture/culture-19.jpg)"></div>
+    <div class="team-photo rotator-image" style="background-image: url(/assets/img/culture/culture-20.jpg)"></div>
+    <div class="team-photo rotator-image" style="background-image: url(/assets/img/culture/culture-21.jpg)"></div>
   </li>
 </ul>
   <!-- <ul id="rotator">
