--- a/src/assets/_scss/base/_page_content.scss
+++ b/src/assets/_scss/base/_page_content.scss
@@ -2,6 +2,7 @@
   padding-top: 45px;
   background-color: $white;
   @include transition(padding-top, .25s);
+  overflow: hidden;
   &.navbar-open {
     padding-top: 90px;
   }
