--- a/src/_includes/photo-grid.html
+++ b/src/_includes/photo-grid.html
@@ -23,13 +23,22 @@
 <div class="row no-gutters">
   <div class="col-lg-6">
     <a href="{{ project1.url }}" class="project-item">
-        <div class="bg-image aspect-1x1 lazy-load" data-image="{{ project1.featured_image | default: site.placeholders.aspect-4x3 }}"></div>
-        <div class="hover-overlay overlay-purple">
-          <div class="overlay-content">
-            <p class="hover-primary-text">{{ project1.client }}</p>
-            <p class="hover-secondary-text">{% for tag in project1.tags %}{{ tag }}{% unless forloop.last %}, {% endunless %}{% endfor %}</p>
+      <div id="carousel-1" class="carousel slide carousel-fade" data-ride="carousel">
+        <div class="carousel-inner">
+          {% for object in project1.gallery %}
+          <div class="carousel-item {% if forloop.first %}active{% endif %}">
+            <div class="bg-image aspect-1x1 lazy-load"
+              data-image="{{ object.image }}"></div>
           </div>
+          {% endfor %}
         </div>
+      </div>  
+      <div class="hover-overlay overlay-purple">
+        <div class="overlay-content">
+          <p class="hover-primary-text">{{ project1.client }}</p>
+          <p class="hover-secondary-text">{% for tag in project1.tags %}{{ tag }}{% unless forloop.last %}, {% endunless %}{% endfor %}</p>
+        </div>
+      </div>
     </a>
   </div>
   <div class="col-lg-6">
@@ -84,8 +93,22 @@
   </div>
   <div class="col-lg-6">
     <a href="{{ project6.url }}" class="project-item">
-      <div class="bg-image aspect-1x1 lazy-load"
-        data-image="{{ project6.featured_image | default: site.placeholders.aspect-4x3 }}"></div>
+      <div id="carousel-2" class="carousel slide carousel-fade" data-ride="carousel">
+        <div class="carousel-inner">
+          {% for object in project6.gallery %}
+          <div class="carousel-item {% if forloop.first %}active{% endif %}">
+            <div class="bg-image aspect-1x1 lazy-load" data-image="{{ object.image }}"></div>
+          </div>
+          {% endfor %}
+        </div>
+      </div>
+      <div class="hover-overlay overlay-purple">
+        <div class="overlay-content">
+          <p class="hover-primary-text">{{ project1.client }}</p>
+          <p class="hover-secondary-text">{% for tag in project1.tags %}{{ tag }}{% unless forloop.last %},
+            {% endunless %}{% endfor %}</p>
+        </div>
+      </div>
       <div class="hover-overlay overlay-khaki">
         <div class="overlay-content">
           <p class="hover-primary-text">{{ project6.client }}</p>
