--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,5 +1,5 @@
 <header id="page-header">
-  <nav id="mainnav" class="navbar">
+  <nav id="mainnav" class="navbar navbar-expand-lg">
     <a class="navbar-brand" href="/"
       ><img
         src="/assets/img/logo-horizontal.svg"
@@ -24,7 +24,7 @@
       class="collapse navbar-collapse collapsed"
       id="primarynav"
     >
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ml-lg-auto">
         <li class="nav-item">
           <a
             class="nav-link{% if page.url contains 'about' %} active{% endif %}"
