--- a/src/assets/_scss/base/_page_header.scss
+++ b/src/assets/_scss/base/_page_header.scss
@@ -22,7 +22,7 @@
       flex-direction: row;
       align-items: center;
       justify-content: center;
-      padding: 30px 0;
+      padding: 10px 0;
     }
   }
   .nav-item {
@@ -36,8 +36,9 @@
       color: $white;
       position: relative;
       overflow: hidden;
-      font-family: $font-family-base;
-      font-size: 20px;
+      font-family: $font-family-secondary;
+      text-transform: uppercase;
+      font-size: 16px;
       font-weight: 400;
       padding: 15px 0;
       @include animation(fadeIn, 0.5s, 0.4s);
