--- a/src/assets/_scss/base/_animations.scss
+++ b/src/assets/_scss/base/_animations.scss
@@ -121,3 +121,15 @@
   }
 }
 
+@keyframes pulse {
+  0%{
+    opacity: .4;
+  }
+  50% {
+    opacity: .2;
+  }
+  100% {
+    opacity: .2;
+  }
+}
+
