--- a/src/assets/_scss/base/_global.scss
+++ b/src/assets/_scss/base/_global.scss
@@ -8,10 +8,31 @@ body {
   font-family: $font-family-base;
   line-height: 1.5;
   background-color: $primary;
+  
+  background-position: center center;
+  background-repeat: no-repeat;
   @include media-breakpoint-down(md) {
     font-size: 1rem;
     line-height: 1.3;
   }
+  &::after {
+    content: '';
+    display: flex;
+    align-items: center;
+    background-image: url('/assets/img/logo-white.svg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 100px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    @include animation(pulse, 2s);
+    animation-iteration-count: infinite;
+  }
+  
 }
 
 section {
