--- a/src/assets/_scss/base/_page_header.scss
+++ b/src/assets/_scss/base/_page_header.scss
@@ -38,7 +38,8 @@
       overflow: hidden;
       font-family: $font-family-secondary;
       text-transform: uppercase;
-      font-size: 16px;
+      font-size: 15px;
+      margin-top: -3px;
       font-weight: 400;
       padding: 15px 0;
       @include animation(fadeIn, 0.5s, 0.4s);
