video modal with youtube playlist embed, add social icon font

--- a/src/assets/_scss/main.scss
+++ b/src/assets/_scss/main.scss
@@ -39,6 +39,7 @@
 @import "components/team_photo_grid";
 @import "components/project_grid";
 @import "components/image_credit";
+@import "components/video_modal";
 
 // Import view specific styles
 @import "pages/focus";
