--- a/src/_includes/scripts.html
+++ b/src/_includes/scripts.html
@@ -2,8 +2,7 @@
 {% include analytics.html %}
 
 <!-- Javascript -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" crossorigin="anonymous" defer></script>
-<!-- <script src="{{ '/assets/js/vendor/gridrotator.js' | prepend: site.baseurl }}" defer></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" crossorigin="anonymous" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"
   defer></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"
