--- a/src/assets/_scss/base/_fonts.scss
+++ b/src/assets/_scss/base/_fonts.scss
@@ -1,19 +1,17 @@
-$custom-font-name: 'project_name';
 @font-face {
-  font-family: $custom-font-name;
-  src: url('/fonts/${custom-font-name}.eot?i6fit0');
-  src: url('/fonts/${custom-font-name}.eot?i6fit0#iefix') format('embedded-opentype'),
-    url('/fonts/${custom-font-name}.ttf?i6fit0') format('truetype'),
-    url('/fonts/${custom-font-name}.woff?i6fit0') format('woff'),
-    url('/fonts/${custom-font-name}.svg?i6fit0#${custom-font-name}') format('svg');
+  font-family: 'ocupop';
+  src:  url('/assets/fonts/ocupop.eot?5ce2q9');
+  src:  url('/assets/fonts/ocupop.eot?5ce2q9#iefix') format('embedded-opentype'),
+    url('/assets/fonts/ocupop.ttf?5ce2q9') format('truetype'),
+    url('/assets/fonts/ocupop.woff?5ce2q9') format('woff'),
+    url('/assets/fonts/ocupop.svg?5ce2q9#ocupop') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
-[class^="icon-"],
-[class*=" icon-"] {
-  // use !important to prevent issues with browser extensions that change /img/fonts
-  font-family: '${custom-font-name}' !important;
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'ocupop' !important;
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -21,26 +19,17 @@ $custom-font-name: 'project_name';
   text-transform: none;
   line-height: 1;
 
-  // Better Font Rendering ===========
+  /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-// Content declarations
-
- // .icon-example:before {
- //   content: "\e900";
- // }
-
-// Media Queries
-// Small devices (landscape phones, 576px and up)
-@media (min-width: $screen-sm-min) {}
-
-// Medium devices (tablets, 768px and up)
-@media (min-width: $screen-md-min) {}
-
-// Large devices (desktops, 992px and up)
-@media (min-width: $screen-lg-min) {}
-
-// Extra large devices (large desktops, 1200px and up)
-@media (min-width: $screen-xl-min) {}
+.icon-facebook:before {
+  content: "\e900";
+}
+.icon-linkedin:before {
+  content: "\e901";
+}
+.icon-twitter:before {
+  content: "\e902";
+}
