--- a/src/_includes/components/cta-contact.html
+++ b/src/_includes/components/cta-contact.html
@@ -1,3 +1,17 @@
 <div id="cta-contact">
-  <div class="__react-app" data-component="ContactCTA"></div>
+  <h3 class="text-center">We also do the weather!</h3>
+  <nav class="nav nav-pills nav-fill">
+    <div class="nav-link">
+      <!-- <a id="weather-tab" class="nav-link active" data-toggle="tab" href="#weather" role="tab" aria-controls="weather"
+        aria-selected="true">
+        Weather you agree or not, we still want to hear from you!
+      </a> -->
+    </div>
+  </nav>
+  <div class="tab-content">
+    <div class="tab-pane active" id="weather" role="tabpanel" aria-labelledby="weather-tab">
+      <div class="__react-app" data-component="ContactCTA"></div>
+      <a href="/contact" class="btn btn-secondary btn-block mb-5">Contact us for a full report</a>
+    </div>
+  </div>
 </div>
