--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,20 +1,35 @@
 <footer id="page-footer">
   <div class="container">
     <div class="row">
-      <div class="col-lg-6">
-        <div class="content">
-          <a href="/" class="logo-footer">
-            <img src="/assets/img/logo-white.svg" class="img-fluid" alt="Ocupop logo">
-          </a>
-          <!-- <a href="/" class="logo-footer">
-            <img src="/assets/img/ocupop_footer_logo_grey.png" class="img-fluid" alt="Ocupop Logo">
-            <img src="/assets/img/ocupop_footer_logo_color.png" class="img-fluid" alt="Ocupop Logo">
-          </a>  -->
+      <div class="col-lg-6 order-lg-last">
+        <div class="text-white">
+          {% include components/cta-contact.html %}
         </div>
       </div>
       <div class="col-lg-6">
-        <div class="text-white">
-          {% include components/cta-contact.html %}
+        <div class="py-3">
+          <a href="/" class="logo-footer">
+            <img src="/assets/img/logo-horizontal.svg" class="img-fluid" alt="Ocupop logo">
+          </a>
+        </div>
+        <div class="py-3">
+          <p class="text-white">Social Icons</p>
+          <div class="d-flex">
+            <ul class="nav">
+              <li class="nav-item">
+                <a href="/" class="nav-link">Home</a>
+              </li>
+              <li class="nav-item">
+                <a href="/about" class="nav-link">About</a>
+              </li>
+              <li class="nav-item">
+                <a href="/work" class="nav-link">Work</a>
+              </li>
+              <li class="nav-item">
+                <a href="/contact" class="nav-link">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
       <!-- <div class="col-6 col-md-2 ml-auto">
@@ -30,7 +45,7 @@
               <li class="nav-item">
                 <a href="/work" class="nav-link">Work</a>
               </li>
-            </ul> 
+            </ul>
           </div>
         </div>
       </div>
@@ -47,7 +62,7 @@
               <li class="nav-item">
                 <a href="/contact" class="nav-link">Contact</a>
               </li>
-            </ul> 
+            </ul>
           </div>
         </div>
       </div> -->
