--- a/src/assets/_scss/_settings.scss
+++ b/src/assets/_scss/_settings.scss
@@ -21,8 +21,9 @@ $red: #dc3545 !default;
 $orange: #ff9560;
 $orange-dark: #eb6547;
 $yellow: #f5c938;
+$yellow-dark: #eDB62e;
 $green: #87a63e;
-$green-dark: #006733;
+$green-dark: #006833;
 $teal: #20c997 !default;
 $cyan: #7dd0e8 !default;
 $navy: #18374b;
