--- a/src/assets/_scss/elements/_hover_overlay.scss
+++ b/src/assets/_scss/elements/_hover_overlay.scss
@@ -42,5 +42,8 @@
   &.overlay-blue-dark {
     background-color: rgba($blue-dark, 0.9);
   }
+  &.overlay-yellow-dark {
+    background-color: rgba($yellow-dark, 0.9);
+  }
   
 }
